--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
+    "querystring": "^0.2.0",
     "sass-loader": "^7.0.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.2",
